<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search_Ads"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemRefresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/text_refresh"
        app:showAsAction="ifRoom" />
    <group android:id="@+id/menuGroupAccount" >
        <item
            android:id="@+id/menuItemFavoriteAds"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/favorites"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menuItemProfile"
            android:enabled="true"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/text_profile" />
    </group>
    <group android:id="@+id/menuGroupAds" >
        <item
            android:id="@+id/menuItemViewCrops"
            android:title="@string/view_crops" />
        <item
            android:id="@+id/menuItemViewVegetables"
            android:title="@string/text_view_vegetables" />
        <item
            android:id="@+id/menuItemViewFruits"
            android:title="@string/text_view_fruits"
            app:showAsAction="never" />
    </group>

</menu>