<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search_brokers"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <group android:id="@+id/menuGroupAccount">
        <item
            android:id="@+id/menuItemFavoriteBrokers"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/favorites"
            app:showAsAction="ifRoom" />
    </group>
    <item
        android:id="@+id/menuItemRefresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/text_refresh"
        app:showAsAction="ifRoom" />
</menu>