<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_btn_register"
            android:text="@string/text_register"
            android:textColor="@color/colorTextNegative"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edtPhone"
            app:layout_constraintTop_toBottomOf="@+id/edtPhone" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_btn_cancel"
            android:text="@android:string/cancel"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
            app:layout_constraintEnd_toStartOf="@+id/btnRegister"
            app:layout_constraintTop_toTopOf="@+id/btnRegister" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/text_enter_your_phone_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/spinCities"
            app:layout_constraintStart_toStartOf="@+id/spinCities"
            app:layout_constraintTop_toBottomOf="@+id/spinCities" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/text_enter_your_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/text_enter_your_address"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="@+id/edtName"
            app:layout_constraintStart_toStartOf="@+id/edtName"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <Spinner
            android:id="@+id/spinCities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:entries="@array/cities"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="@+id/edtAddress"
            app:layout_constraintStart_toStartOf="@+id/edtAddress"
            app:layout_constraintTop_toBottomOf="@+id/edtAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>