<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnViewDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_btn_view_details"
            android:text="@string/text_view_details_btn"
            android:textColor="@color/colorSecondary"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="@+id/rateQuality"
            app:layout_constraintStart_toStartOf="@+id/rateQuality"
            app:layout_constraintTop_toBottomOf="@+id/rateQuality" />

        <ImageView
            android:id="@+id/imgAd"
            android:layout_width="0dp"
            android:layout_height="@dimen/list_image_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/text_advertisement_image"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/agri_3" />

        <RatingBar
            android:id="@+id/rateQuality"
            style="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="5"
            android:numStars="3"
            android:progressBackgroundTint="@color/colorSecondaryLight"
            android:progressTint="@color/colorSecondary"
            android:rating="2"
            android:stepSize="0.1"
            app:layout_constraintBottom_toBottomOf="@+id/txtQuantity2"
            app:layout_constraintEnd_toEndOf="@+id/imgAd"
            app:layout_constraintTop_toTopOf="@+id/txtQuantity2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_phone"
            android:textColor="@color/colorTextPositive"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/txtTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <TextView
            android:id="@+id/txtFarmerPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="0300-1234567"
            android:textColor="@color/colorTextPositive"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/txtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:text="120"
            android:textColor="@color/colorTextPositive"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/txtQuantity2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/quantity_scale"
            android:textColor="@color/colorTextPositive"
            app:layout_constraintBottom_toBottomOf="@+id/txtQuantity"
            app:layout_constraintStart_toEndOf="@+id/txtQuantity"
            app:layout_constraintTop_toTopOf="@+id/txtQuantity" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:text="10000000"
            android:textColor="@color/colorTextPositive"
            app:layout_constraintBottom_toBottomOf="@+id/txtPrice2"
            app:layout_constraintStart_toEndOf="@+id/txtPrice2"
            app:layout_constraintTop_toTopOf="@+id/txtPrice2" />

        <TextView
            android:id="@+id/txtPrice2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:text="@string/currency"
            android:textColor="@color/colorTextPositive"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_price"
            android:textColor="@color/colorTextPositive"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Ad Title"
            android:textColor="@color/colorTextPositive"
            android:textSize="@dimen/list_title_size"
            app:layout_constraintEnd_toStartOf="@+id/txtLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_location_label"
            android:text="Lahore"
            android:textColor="@color/colorTextNegative"
            android:textSize="@dimen/label_location_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtTitle" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_quantity"
            android:textColor="@color/colorTextPositive"
            app:layout_constraintStart_toStartOf="@+id/imgAd"
            app:layout_constraintTop_toBottomOf="@+id/imgAd" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
